...
    >
      {showBackButton && (
        <Button
          size="$4"
          onPress={onBackPress}
          circular
          testID="header-back-button"
          accessibilityLabel="header-back-button"
        >
          <MaterialIcons name="chevron-left" size={30} color={headerIconColor} />
        </Button>
      )}
      <YStack flex={1}>
...
